--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-This is my test automation for the Main Production server! with master repo
-This is my other branch Ive created this branch for testing purpose so that  it wont affect my mainbramch and my main production server[D[A[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[server
+This is my other branch Ive created this branch for testing purpose so that  it wont affect my mainbramch and my main production server
