--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-This is my other branch Ive created this branch for testing purpose so that  it wont affect my mainbramch and my main production server. Changes made
+This is my other branch Ive created this branch for testing purpose so that  it wont affect my mainbramch and my main production server. Changes made..
